--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 main {
-  text-align: center;
-  vertical-align: center;
-  line-height: 100vh
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
 }
