--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 main {
   padding: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+canvas {
+  margin-right: 20px
 }
